Fixed a few GUI bugs found on mobile.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -54,9 +54,8 @@ body.v1 {
 					box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.1);
 					overflow: hidden;
 
-					img { height: 110px; float: right; }
+					img { height: 100px; width: 100px; float: right; }
 					div.left { 
-						float:left;
 						width: 65%;
 						h4 { 
 							margin: 5px 0px 0px 5px;
